--- a/Video.html
+++ b/Video.html
@@ -24,16 +24,16 @@
   </head>
   <body>
     <iframe
-      src="https://raw.githack.com/KuttTusaN/biggboss/main/chart.html"
+      src="https://kutttusan.github.io/biggboss/chart.html"
       id="iframe1"></iframe>
     <iframe
-      src="https://raw.githack.com/KuttTusaN/biggboss/main/total-vote.html"
+      src="https://kutttusan.github.io/biggboss/total-vote.html"
       id="iframe2"></iframe>
     <iframe
-      src="https://raw.githack.com/KuttTusaN/biggboss/main/main-bar.html"
+      src="https://kutttusan.github.io/biggboss/main-bar.html"
       id="iframe3"></iframe>
     <iframe
-      src="https://raw.githack.com/KuttTusaN/biggboss/main/user-percentage.html"
+      src="https://kutttusan.github.io/biggboss/user-percentage.html"
       id="iframe4"></iframe>
 
     <script>
