--- a/main-bar.html
+++ b/main-bar.html
@@ -18,20 +18,22 @@
         padding: 0;
         width: 1920px;
         height: 1080px;
-        background-color: #00000000;
+        background-color: #ffffff00;
       }
 
       .container {
         max-width: 1550px;
-        margin: 20px auto;
+        margin: 20px auto; /* Center the container horizontally */
         padding: 20px;
         background-color: #1b070714;
         border-radius: 8px;
+        max-height: 800px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
 
       .chart-container {
         position: relative;
+        margin: 0 auto; /* Center the chart horizontally */
         margin-bottom: 20px;
       }
 
@@ -48,7 +50,9 @@
         flex-wrap: wrap;
         gap: 20px;
         padding-top: 20px;
-        width: 100%;
+        margin: 20px auto; /* Center the container horizontally */
+        padding: 20px;
+        width: 1600px;
         justify-content: center;
       }
 
