--- a/chart.html
+++ b/chart.html
@@ -23,15 +23,15 @@
       .container {
         max-width: 1200px; /* Set maximum width */
         margin: 0 auto; /* Center the container horizontally */
-        padding: 20px; /* Add padding */
+        padding: 30px; /* Add padding */
       }
 
       /* Styling the chart container */
       #chartContainer {
-        padding-top: 100px;
-        margin-top: 50px;
+        padding: 100px;
+        margin-top: 110px;
         max-width: 1200px;
-        max-height: 800px; /* Adjust max width of the chart container */
+        max-height: 950px; /* Adjust max width of the chart container */
         margin: 20px auto; /* Center the chart container */
       }
 
@@ -64,9 +64,9 @@
 
       /* Styling the total votes section */
       #totalVotes {
-        font-size: 20px; /* Increase font size */
+        font-size: 50px; /* Increase font size */
         font-weight: bold; /* Add bold font weight */
-        color: #333; /* Change text color */
+        color: #ffffff; /* Change text color */
         margin-top: 20px; /* Add top margin */
       }
 
