--- a/user-percentage.html
+++ b/user-percentage.html
@@ -18,8 +18,7 @@
         background-image: url(https://i.pinimg.com/originals/42/64/a4/4264a4ba598c17ef23685260a13bd849.gif);
         background-repeat: no-repeat;
         background-size: cover;
-        height: 1080px;
-        width: 1920px;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -44,8 +43,8 @@
       }
 
       .user-pic {
-        width: 500px;
-        height: 500px;
+        width: 550px;
+        height: 550px;
         border-radius: 50%;
         overflow: hidden;
         margin: 0 auto 20px;
