--- a/admin-add-user.html
+++ b/admin-add-user.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Data Upload</title>
-  </head>
-  <body>
-    <form id="userForm">
+    <meta name="viewport" content="wi
       <label for="userName">User Name:</label>
       <input type="text" id="userName" name="userName" /><br /><br />
 
@@ -24,14 +20,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
     <script>
       const firebaseConfig = {
-        apiKey: "AIzaSyDXSLlef9SYpaP6ZGZvieMEsdn5PvQxhJw",
-        authDomain: "direct-tv-b8cbc.firebaseapp.com",
-        databaseURL: "https://direct-tv-b8cbc-default-rtdb.firebaseio.com",
-        projectId: "direct-tv-b8cbc",
-        storageBucket: "direct-tv-b8cbc.appspot.com",
-        messagingSenderId: "999287626395",
-        appId: "1:999287626395:web:7ded376396f7e2d2aa443e",
-      };
+       
 
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
