--- a/index.html
+++ b/index.html
@@ -120,13 +120,7 @@
     <script>
       // Firebase configuration
       const firebaseConfig = {
-        apiKey: "AIzaSyDXSLlef9SYpaP6ZGZvieMEsdn5PvQxhJw",
-        authDomain: "direct-tv-b8cbc.firebaseapp.com",
-        databaseURL: "https://direct-tv-b8cbc-default-rtdb.firebaseio.com",
-        projectId: "direct-tv-b8cbc",
-        storageBucket: "direct-tv-b8cbc.appspot.com",
-        messagingSenderId: "999287626395",
-        appId: "1:999287626395:web:7ded376396f7e2d2aa443e",
+        authDomain: "direct-tv-b8cbc.fireb95:web:7ded376396f7e2d2aa443e",
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
